--- a/main.ipynb
+++ b/main.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 159,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import itertools\n",
     "\n",
     "\n",
     "class Action:\n",
@@ -16,21 +17,6 @@
     "    GAP_I = 2\n",
     "    GAP_J = 3\n",
     "    START = 4\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def fix_upper_action_matrix(action_matrix):\n",
-    "        \"\"\"\n",
-    "        Make the lower triangular matrix equal to the upper triangular matrix, but with GAP_I and GAP_J swapped.\n",
-    "        \"\"\"\n",
-    "        lower_matrix = np.triu(action_matrix).T\n",
-    "\n",
-    "        # swap GAP_I and GAP_J\n",
-    "        pos_i = np.where(lower_matrix == Action.GAP_I)\n",
-    "        pos_j = np.where(lower_matrix == Action.GAP_J)\n",
-    "        lower_matrix[pos_i] = Action.GAP_J\n",
-    "        lower_matrix[pos_j] = Action.GAP_I\n",
-    "\n",
-    "        return action_matrix + lower_matrix\n",
     "\n",
     "\n",
     "class MultiSequenceAligner:\n",
@@ -69,7 +55,7 @@
     "        # Backtrack matrix contains directions, which is a dict for each pair of sequences indicating which action the score came from\n",
     "        # The keys are tuples of the indices of the sequences in the list of sequences\n",
     "        # The values are tuples of the indices of the sequences in the list of sequences and the action that led to the score\n",
-    "        backtrack_dimensions = dimensions + [len(sequences), len(sequences)]\n",
+    "        backtrack_dimensions = dimensions + [len(sequences)]\n",
     "        backtrack_matrix = np.zeros(backtrack_dimensions)\n",
     "\n",
     "        # Fill matrix\n",
@@ -91,89 +77,99 @@
     "        \"\"\"\n",
     "        # if idx all zeros, return 0\n",
     "        if all([i == 0 for i in idx]):\n",
-    "            # backtrack direction is start for all\n",
-    "            backtrack_directions = np.full((len(sequences), len(sequences)), Action.START)\n",
-    "            return 0, backtrack_directions\n",
+    "            return 0, None\n",
     "\n",
-    "        # Get all possible pairwise combinations\n",
-    "        total_sequences = len(sequences)\n",
-    "        pairwise_combinations = [(i, j) for i in range(total_sequences) for j in range(i + 1, total_sequences)]\n",
+    "        num_sequences = len(sequences)\n",
+    "        all_neighbours = list(itertools.product([0, -1], repeat=num_sequences))\n",
+    "        all_neighbours.remove(tuple([0 for _ in range(num_sequences)]))\n",
+    "        neighbours = [tuple(np.array(idx) + np.array(neighbour)) for neighbour in all_neighbours]\n",
     "\n",
-    "        backtrack_directions = np.zeros((total_sequences, total_sequences))\n",
+    "        # get scores for all neighbours\n",
+    "        scores = []\n",
+    "        for neighbour in neighbours:\n",
     "\n",
-    "        # Get scores for all pairwise combinations\n",
-    "        total = 0\n",
-    "        for i, j in pairwise_combinations:\n",
-    "            pairwise_matrix = self._get_pairwise_matrix(i, j, idx, matrix, sequences)\n",
-    "            score, action = self._get_pairwise_score(idx, sequences, pairwise_matrix, i, j)\n",
-    "            total += score\n",
-    "            backtrack_directions[i, j] = action\n",
+    "            # if any of the indices is negative, return -inf\n",
+    "            if any([i < 0 for i in neighbour]):\n",
+    "                scores.append(-np.inf)\n",
+    "                continue\n",
     "\n",
-    "        # create a full matrix from the upper triangular matrix\n",
-    "        backtrack_directions = Action.fix_upper_action_matrix(backtrack_directions)\n",
+    "            pairs = self._get_pairs(num_sequences)\n",
+    "            total = 0\n",
+    "            for i, j in pairs:\n",
+    "                score, action = self._get_pairwise_score(neighbour, i, j, matrix, sequences, idx)\n",
+    "                total += score\n",
+    "            scores.append(score)\n",
+    "\n",
+    "        max_score = max(scores)\n",
+    "        max_idx = scores.index(max_score)\n",
+    "        max_score_neighbour = neighbours[max_idx]\n",
     "\n",
     "        if method == \"global\":\n",
-    "            return total, backtrack_directions\n",
+    "            return total, max_score_neighbour\n",
     "        elif method == \"local\":\n",
-    "            # backtrack direction is start for all\n",
-    "            backtrack_directions = np.full((len(sequences), len(sequences)), Action.START)\n",
-    "            return max(total, 0), backtrack_directions\n",
+    "            return max(max_score, 0), max_score_neighbour if max_score > 0 else None\n",
     "        else:\n",
     "            raise ValueError(\"Method must be either 'global' or 'local'\")\n",
     "\n",
-    "    def _get_pairwise_matrix(self, i, j, idx, matrix, sequences):\n",
-    "        # create a pairwise_matrix, which is the 2D matrix for i and j, for all other indices, use the idx value\n",
-    "        pairwise_matrix = np.zeros((len(sequences[i]) + 1, len(sequences[j]) + 1))\n",
-    "        for idx_i, idx_j in np.ndindex(pairwise_matrix.shape):\n",
-    "            new_idx = list(idx)\n",
-    "            new_idx[i] = idx_i\n",
-    "            new_idx[j] = idx_j\n",
-    "            pairwise_matrix[idx_i, idx_j] = matrix[tuple(new_idx)]\n",
-    "        return pairwise_matrix\n",
-    "\n",
-    "    def _get_pairwise_score(self, idx: tuple[int], sequences: list[str], pairwise_matrix: np.ndarray, i: int, j: int):\n",
-    "        \"\"\"\n",
-    "        Returns the score for the given pairs at given position in the matrix. This is similar to the Needleman-Wunsch and Smith-Waterman algorithms. This assigns the max of following  scores to S(i, j) (for global alignment, same for local alignment, but all scores would be set to max(0, score)):\n",
-    "        - S(i-1, j-1) + s(ai, bj)\n",
-    "        - S(i-1, j) - w  (gap in sequence 1)\n",
-    "        - S(i, j-1) - w  (gap in sequence 2)\n",
-    "        Note that i and j are the indices of the sequences in the list of sequences, not the indices of the position in the matrix.\n",
-    "\n",
-    "        :param idx: Index of the position in the matrix\n",
-    "        :param sequences: List of sequences to align\n",
-    "        :param matrix: Partially completeed matrix of scores for all possible alignments of the given pair\n",
-    "        :param i: Index of the first sequence in the pair\n",
-    "        :param j: Index of the second sequence in the pair\n",
-    "        \"\"\"\n",
-    "        # get the amino acids at the given position\n",
-    "        seq_i = sequences[i]\n",
-    "        seq_j = sequences[j]\n",
-    "        aa_i = seq_i[idx[i] - 1] if idx[\n",
-    "                                        i] > 0 else None  # -1 because the matrix has an extra row and column for the initial gap\n",
-    "        aa_j = seq_j[idx[j] - 1] if idx[j] > 0 else None\n",
+    "    def _get_pairwise_score(self, neighbour, i, j, matrix, sequences, idx):\n",
+    "        neighbour_i = neighbour[i]\n",
+    "        neighbour_j = neighbour[j]\n",
     "\n",
     "        idx_i = idx[i]\n",
     "        idx_j = idx[j]\n",
     "\n",
-    "        # get the scores for the three possible cases\n",
-    "        previous_score = pairwise_matrix[(idx_i - 1, idx_j - 1)] if idx_i > 0 and idx_j > 0 else -np.inf\n",
+    "        diff_i = idx_i - neighbour_i\n",
+    "        diff_j = idx_j - neighbour_j\n",
     "\n",
-    "        match_score = previous_score + self._get_match_score(aa_i, aa_j)\n",
-    "        gap_i_score = pairwise_matrix[(idx_i - 1, idx_j)] + self.indel if idx_i > 0 else self.indel\n",
-    "        gap_j_score = pairwise_matrix[(idx_i, idx_j - 1)] + self.indel if idx_j > 0 else self.indel\n",
-    "        # TODO: two gaps score\n",
+    "        neighbour_score = matrix[neighbour] if all([neighbour_i >= 0, neighbour_j >= 0]) else -np.inf\n",
     "\n",
-    "        # get the score for the current position\n",
-    "        score = max(match_score, gap_i_score, gap_j_score)\n",
-    "\n",
-    "        if score == match_score:\n",
+    "        # determin the action based on diff_i and diff_j\n",
+    "        if diff_i == 1 and diff_j == 1:\n",
     "            action = Action.MATCH\n",
-    "        elif score == gap_i_score:\n",
-    "            action = Action.GAP_I\n",
-    "        elif score == gap_j_score:\n",
+    "        elif diff_i == 1 and diff_j == 0:\n",
     "            action = Action.GAP_J\n",
+    "        elif diff_i == 0 and diff_j == 1:\n",
+    "            action = Action.GAP_I\n",
+    "        elif diff_i == 0 and diff_j == 0:\n",
+    "            # insertion somewhere else\n",
+    "            return 0, None\n",
+    "        else:\n",
+    "            raise ValueError(f\"Invalid offset: {diff_i}, {diff_j}\")\n",
+    "\n",
+    "        if action == Action.MATCH:\n",
+    "            # match\n",
+    "            aa_i = sequences[i][idx_i-1]\n",
+    "            aa_j = sequences[j][idx_j-1]\n",
+    "            score = neighbour_score + self.match if aa_i == aa_j else neighbour_score + self.mismatch\n",
+    "\n",
+    "        elif action == Action.GAP_I:\n",
+    "            # gap in j\n",
+    "            score = neighbour_score + self.indel\n",
+    "        elif action == Action.GAP_J:\n",
+    "            # gap in i\n",
+    "            score = neighbour_score + self.indel\n",
+    "        else:\n",
+    "            raise ValueError(\"Invalid offset\")\n",
     "\n",
     "        return score, action\n",
+    "\n",
+    "\n",
+    "    def _get_pairs(self, n):\n",
+    "        \"\"\"\n",
+    "        Returns all possible pairs of n numbers\n",
+    "        :param n: Number of numbers\n",
+    "        :return: List of all possible pairs of n numbers\n",
+    "        \"\"\"\n",
+    "        pairs = []\n",
+    "        for i in range(n):\n",
+    "            for j in range(i + 1, n):\n",
+    "                pairs.append((i, j))\n",
+    "        return pairs\n",
+    "\n",
+    "    def _get_action_combinations(self, n):\n",
+    "        actions = [Action.MATCH, Action.GAP_I, Action.GAP_J]\n",
+    "        action_combinations = itertools.product(actions, repeat=n)\n",
+    "        return action_combinations\n",
     "\n",
     "    def global_alignment(self, sequences: list[str]):\n",
     "        \"\"\"\n",
@@ -210,33 +206,21 @@
     "            current_position = np.unravel_index(np.argmax(alignment_matrix), alignment_matrix.shape)\n",
     "\n",
     "        while True:\n",
-    "            print(current_position)\n",
-    "            score_actions = backtrack_matrix[tuple(current_position)]\n",
     "\n",
-    "            # if all actions are start, we are done\n",
-    "            if np.all(score_actions == Action.START):\n",
+    "            # change the floats (e.g. 2.000000) in current_position to ints\n",
+    "            current_position = [int(i) for i in current_position]\n",
+    "            previous_neighbour = backtrack_matrix[tuple(current_position)]\n",
+    "\n",
+    "            if np.all(np.isnan(previous_neighbour)):\n",
     "                break\n",
     "\n",
-    "            # if there is a match, add the amino acid to the aligned sequence\n",
-    "            for i, sequence in enumerate(sequences):\n",
-    "                actions = score_actions[i]\n",
-    "\n",
-    "                match_count = np.sum(actions == Action.MATCH)\n",
-    "                gapi_count = np.sum(actions == Action.GAP_I)\n",
-    "                gapj_count = np.sum(actions == Action.GAP_J)\n",
-    "\n",
-    "                aa_idx =  current_position[i] - 1\n",
-    "\n",
-    "                if match_count >= gapi_count and match_count >= gapj_count and aa_idx >= 0:\n",
-    "                    aligned_sequences_reversed[i] += sequence[aa_idx]\n",
-    "                    current_position[i] -= 1\n",
-    "                elif gapi_count >= gapj_count and current_position[i] > 0:\n",
-    "                    aligned_sequences_reversed[i] += \".\"\n",
-    "                    # current_position[i] -= 1\n",
+    "            for sequence_idx in range(len(sequences)):\n",
+    "                if current_position[sequence_idx] == previous_neighbour[sequence_idx]:\n",
+    "                    aligned_sequences_reversed[sequence_idx] += \".\"\n",
     "                else:\n",
-    "                    aligned_sequences_reversed[i] += \".\"\n",
-    "                    current_position[i] -= 1\n",
+    "                    aligned_sequences_reversed[sequence_idx] += sequences[sequence_idx][current_position[sequence_idx] - 1]\n",
     "\n",
+    "            current_position = previous_neighbour\n",
     "\n",
     "        aligned_sequences = [sequence[::-1] for sequence in aligned_sequences_reversed]\n",
     "        return aligned_sequences\n",
@@ -244,31 +228,28 @@
     "    def _get_match_score(self, aa_i: str, aa_j: str):\n",
     "        if aa_i is None or aa_j is None:\n",
     "            return -np.inf\n",
-    "        return self.match if aa_i == aa_j else self.mismatch\n"
+    "        return self.match if aa_i == aa_j else self.mismatch\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 160,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 1, 1]\n",
-      "[2, 0, 0]\n",
-      "[1, -1, -1]\n",
-      "[0, -2, -2]\n",
-      "A.C\n",
-      "..A\n",
-      "..A\n"
+      "..ACTGGTCA.\n",
+      "CA..GGGTCA.\n",
+      "CC..AGGACCA\n"
      ]
     }
    ],
    "source": [
     "aligner = MultiSequenceAligner()\n",
-    "alignmets = aligner.global_alignment([\"ABC\", \"A\", \"A\"])\n",
-    "print('\\n'.join(alignmets))"
+    "alignments = aligner.global_alignment([\"ACTGGTCA\", \"CAGGGTCA\", \"CCAGGACCA\"])\n",
+    "print('\\n'.join(alignments))"
    ],
    "metadata": {
     "collapsed": false
@@ -276,13 +257,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 121,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[ 0., -4.],\n       [-4.,  5.]])"
      },
-     "execution_count": 32,
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aligner = MultiSequenceAligner()\n",
+    "am, bm = aligner.get_alignment_matrix([\"A\", \"A\"], method=\"global\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[[nan, nan],\n        [ 0.,  0.]],\n\n       [[ 0.,  0.],\n        [ 0.,  0.]]])"
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[ 0., -4.],\n       [-4.,  5.]])"
+     },
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,13 +318,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 124,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[[[4., 4.],\n         [4., 4.]],\n\n        [[0., 2.],\n         [0., 0.]]],\n\n\n       [[[0., 2.],\n         [0., 0.]],\n\n        [[0., 1.],\n         [0., 0.]]]])"
+      "text/plain": "array([[[nan, nan],\n        [ 0.,  0.]],\n\n       [[ 0.,  0.],\n        [ 0.,  0.]]])"
      },
-     "execution_count": 33,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
