--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 129,
    "metadata": {
     "collapsed": true
    },
@@ -278,7 +278,7 @@
     "            return -np.inf\n",
     "        return self.match if aa_i == aa_j else self.mismatch\n",
     "\n",
-    "    def align_fasa(self, input_file: str, output_file: str = None, method: str = \"global\") -> None:\n",
+    "    def align_fasta(self, input_file: str, output_file: str = None, method: str = \"global\") -> None:\n",
     "        \"\"\"\n",
     "        Aligns the sequences in the given fasta file and writes the result to the given output file. If no output file is given, the result is printed to the console.\n",
     "        :param input_file: Path to the fasta file containing the sequences to align\n",
@@ -312,6 +312,50 @@
     "            sequence_dict[record.id] = str(record.seq)\n",
     "        return sequence_dict"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unknown_J_region_1: GYSSASKIIFGSGTRLSIRP\n",
+      "unknown_J_region_2: NTE.AF...FGQGTRLTVV.\n",
+      "unknown_J_region_3: NYG.YT...FGSGTRLTVV.\n"
+     ]
+    }
+   ],
+   "source": [
+    "aligner = MultiSequenceAligner()\n",
+    "aligner.align_fasta(\"cs_assignment.fasta\", method=\"global\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unknown_J_region_1: FGSGTRL\n",
+      "unknown_J_region_2: FGQGTRL\n",
+      "unknown_J_region_3: FGSGTRL\n"
+     ]
+    }
+   ],
+   "source": [
+    "aligner = MultiSequenceAligner(mismatch=-4)\n",
+    "aligner.align_fasta(\"cs_assignment.fasta\", method=\"local\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
