--- a/main.ipynb
+++ b/main.ipynb
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 141,
    "outputs": [
     {
      "name": "stdout",
@@ -474,6 +474,33 @@
    ],
    "source": [
     "print_alignments([\"ABC\", \"AC\", \"AB\", \"BCD\"], method=\"local\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AB.\n",
+      ".BA\n",
+      ".BA\n",
+      "score: 4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "aligner = MultiSequenceAligner()\n",
+    "seqs = [\"AB\", \"BA\", \"BA\"]\n",
+    "am, bm = aligner.get_alignment_matrix(seqs)\n",
+    "print_alignments(seqs)\n",
+    "last_index = tuple([len(s) for s in seqs])\n",
+    "print(f'score: {am[last_index]}')"
    ],
    "metadata": {
     "collapsed": false
